# kod

./: .gitignore  .pr_agent.toml  .pre-commit-config.yaml  Containerfile  Makefile  OWNERS  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: mcp_client.py  search.py
src/kod/: __init__.py  cli.py  config.py  models.py
src/kod/pipeline/: __init__.py  build_image.py  embed.py  extract.py  index.py  io.py  transform.py
src/kod/server/: __init__.py  app.py  server.py  tools.py
tests/: conftest.py  test_build_image.py  test_cli.py  test_config.py  test_embed.py  test_extract.py  test_index.py  test_integration.py  test_models.py  test_pipeline_io.py  test_server.py  test_transform.py
tests/fixtures/docs/: enterprise-contract.md  getting-started.md  pipelines.md  troubleshooting-builds.md  workspaces.md
